[package]
name = "crown"
version = "0.1.0"
edition = "2021"

[dependencies]
const_format = "0.2.32"
dioxus = "0.5.1"
glob = "0.3.1"
greetd_ipc = { version = "0.10.3", features = ["tokio-codec"] }
pwd = "1.4.0"
regex = "1.10.5"
shlex = "1.3.0"
tokio = { version = "1.38.0", features = ["net", "sync", "rt", "time"] }
tracing = "0.1.40"
